🔒 SECURITY: Remove sensitive backup files and update .gitignore
🚨 CRITICAL SECURITY FIX:
- Removed backup files containing AWS temporary credentials
- Updated .gitignore to prevent future backup file commits
- Addresses GitHub security alert for exposed secrets

🛡️ SECURITY MEASURES:
- Deleted all backup/ directory contents
- Added backup file patterns to .gitignore
- Removed .last-backup-path file
- Added AWS sensitive data patterns to gitignore

⚠️ NOTE: This commit removes sensitive data but git history
still contains the credentials in commit 4dd0447.
History rewrite may be needed for complete security.

--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,13 @@ aws/outputs/
 # Backup files
 *.backup
 *.bak
+backups/
+.last-backup-path
+
+# AWS sensitive data
+*lambda-function.json
+*deployment-config.json
+*table-backup.json
 
 # Editor backups
 *~
